feat: Review tasks result display - MEED-8983 - meeds-io/MIPs#193 (#503)